--- a/source/catalog.html
+++ b/source/catalog.html
@@ -220,12 +220,8 @@
             </li>
 
             <li class="product-all-cards">
-              <a class="product-all-cards__link" href="#">
-                <h3 class="product-all-cards__catalog product-all-cards__catalog--link">Показать еще 100500 товаров</h3>
-              </a>
-              <a class="product-all-cards__link" href="#">
-                <p class="product-all-cards__catalog product-all-cards__catalog--description">На самом деле вкусов гораздо больше!</p>
-              </a>
+              <h3 class="product-all-cards__catalog-title">Показать еще 100500 товаров</h3>
+              <p class="product-all-cards__catalog-description">На самом деле вкусов гораздо больше!</p>
               <a class="product-all-cards__button" href="catalog/new-goods.html">Показать все</a>
             </li>
 
@@ -310,7 +306,11 @@
         <div class="screen-stretch-wrapper">
           <h3 class="main-contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
           <address class="main-contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-          <img src="images/map.png" width="320" height="362" alt="Карта с указанием адреса офиса">
+          <picture>
+            <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-pc@1x.png 1x, images/map-pc@2x.png 2x">
+            <source media="(min-width: 768px)" width="768" height="400" type="image/png" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
+            <img class="main-contacts-map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с указанием адреса офиса">
+          </picture>
         </div>
       </section>
     </div>
