--- a/source/index.html
+++ b/source/index.html
@@ -60,23 +60,23 @@
             <source media="(min-width: 768px)" width="710" height="610" type="image/png" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
             <img class="nutrition-programs__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
           </picture>
-          <button class="nutrition-programs__button" type="button">Подобрать программу</button>
+          <a class="nutrition-programs__button" href="#">Подобрать программу</a>
         </header>
       </div>
     </section>
 
-    <section class="catalog-categories">
+    <section class="categories">
       <div class="screen-stretch-wrapper">
         <h2 class="visually-hidden">Категории каталога</h2>
-        <div class="categories-card">
-          <h3 class="categories-card__title">Похудение</h3>
-          <p class="categories-card__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="categories-card__link" href="catalog/slim.html">Каталог SLIM</a>
+        <div class="categories__card">
+          <h3 class="categories__card-title">Похудение</h3>
+          <p class="categories__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="categories__card-link" href="catalog/slim.html">Каталог SLIM</a>
         </div>
-        <div class="categories-card">
-          <h3 class="categories-card__title">Набор массы</h3>
-          <p class="categories-card__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="categories-card__link" href="catalog/pro.html">Каталог PRO</a>
+        <div class="categories__card">
+          <h3 class="categories__card-title">Набор массы</h3>
+          <p class="categories__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="categories__card-link" href="catalog/pro.html">Каталог PRO</a>
         </div>
       </div>
     </section>
