--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
+  <header class="main-header main-header--on-content">
     <div class="screen-stretch-wrapper">
       <a class="main-header__logo" href="#">
         <picture>
@@ -51,18 +51,16 @@
 
   <main class="main-container">
     <section class="nutrition-programs">
-      <div class="screen-stretch-wrapper">
-        <header class="nutrition-programs__header">
-          <h1 class="nutrition-programs__title">Функциональное питание для котов</h1>
-          <p class="nutrition-programs__description">Занялся собой? Займись котом!</p>
-          <picture>
-            <source media="(min-width: 1440px)" width="552" height="500" type="image/png" srcset="images/index-can-pc@1x.png 1x, images/index-can-pc@2x.png 2x">
-            <source media="(min-width: 768px)" width="710" height="610" type="image/png" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
-            <img class="nutrition-programs__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
-          </picture>
-          <a class="nutrition-programs__button" href="#">Подобрать программу</a>
-        </header>
-      </div>
+      <header class="nutrition-programs__header">
+        <h1 class="nutrition-programs__title">Функциональное питание для котов</h1>
+        <p class="nutrition-programs__description">Занялся собой? Займись котом!</p>
+        <picture>
+          <source media="(min-width: 1440px)" width="552" height="500" type="image/png" srcset="images/index-can-pc@1x.png 1x, images/index-can-pc@2x.png 2x">
+          <source media="(min-width: 768px)" width="710" height="610" type="image/png" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
+          <img class="nutrition-programs__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
+        </picture>
+        <a class="nutrition-programs__button" href="#">Подобрать программу</a>
+      </header>
     </section>
 
     <section class="categories">
@@ -137,44 +135,42 @@
       <div class="screen-stretch-wrapper">
         <h3 class="main-contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
         <address class="main-contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-        <picture>
-          <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-pc@1x.png 1x, images/map-pc@2x.png 2x">
-          <source media="(min-width: 768px)" width="768" height="400" type="image/png" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
-          <img class="main-contacts-map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с указанием адреса офиса">
-        </picture>
       </div>
+      <picture>
+        <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-pc@1x.png 1x, images/map-pc@2x.png 2x">
+        <source media="(min-width: 768px)" width="768" height="400" type="image/png" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
+        <img class="main-contacts-map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с указанием адреса офиса">
+      </picture>
     </section>
   </main>
 
   <footer class="main-footer">
-    <div class="screen-stretch-wrapper">
-      <a class="main-footer__logo" href="#">
-        <picture>
-          <img class="logo-text" src="images/logo-text-mobile.svg" width="128" height="24" alt="Текстовое название логотипа Кэт Энерджи">
-        </picture>
+    <a class="main-footer__logo" href="#">
+      <picture>
+        <img class="logo-text" src="images/logo-text-mobile.svg" width="128" height="24" alt="Текстовое название логотипа Кэт Энерджи">
+      </picture>
+    </a>
+
+    <div class="main-footer__social social">
+      <h2 class="visually-hidden">Ссылки на наши социальные сети</h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Ютуб</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Телеграм</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="copyright">
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="visually-hidden">Логотип разработчика</span>
       </a>
-
-      <div class="main-footer__social social">
-        <h2 class="visually-hidden">Ссылки на наши социальные сети</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Вконтакте</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Ютуб</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Телеграм</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="visually-hidden">Логотип разработчика</span>
-        </a>
-      </div>
     </div>
   </footer>
 </body>
