--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
           <source media="(min-width: 768px)" width="710" height="610" type="image/png" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
           <img class="nutrition-programs__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
         </picture>
-        <a class="nutrition-programs__button" href="#">Подобрать программу</a>
+        <a class="nutrition-programs__button button" href="#">Подобрать программу</a>
       </header>
     </section>
 
