--- a/source/index.html
+++ b/source/index.html
@@ -66,16 +66,18 @@
     <section class="categories">
       <div class="screen-stretch-wrapper">
         <h2 class="visually-hidden">Категории каталога</h2>
-        <div class="categories__card categories__card-slim">
-          <h3 class="categories__card-title">Похудение</h3>
-          <p class="categories__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="categories__card-link" href="catalog/slim.html">Каталог SLIM</a>
-        </div>
-        <div class="categories__card categories__card-pro">
-          <h3 class="categories__card-title">Набор массы</h3>
-          <p class="categories__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="categories__card-link" href="catalog/pro.html">Каталог PRO</a>
-        </div>
+        <ul class="categories__list">
+          <li class="categories__card categories__card-slim">
+            <h3 class="categories__card-title">Похудение</h3>
+            <p class="categories__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="categories__card-link" href="catalog/slim.html">Каталог SLIM</a>
+          </li>
+          <li class="categories__card categories__card-pro">
+            <h3 class="categories__card-title">Набор массы</h3>
+            <p class="categories__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="categories__card-link" href="catalog/pro.html">Каталог PRO</a>
+          </li>
+        </ul>
       </div>
     </section>
 
