--- a/source/index.html
+++ b/source/index.html
@@ -111,15 +111,15 @@
           <h2 class="example__title title-section">Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <dl class="example__statistics statistics">
-            <div class="statistics-item">
+            <div class="statistics__item">
               <dt class="statistics__value">5 кг</dt>
               <dd class="statistics__parameter">снижение веса</dd>
             </div>
-            <div class="statistics-item">
+            <div class="statistics__item">
               <dt class="statistics__value">60 дней</dt>
               <dd class="statistics__parameter">затрачено времени</dd>
             </div>
-            <div class="statistics-item statistics-item--total">
+            <div class="statistics__item statistics__item--total">
               <dt class="statistics__expenses">Затраты на питание:</dt>
               <dd class="statistics__cost">15 000 руб.</dd>
             </div>
