--- a/source/catalog.html
+++ b/source/catalog.html
@@ -66,6 +66,10 @@
           <li class="product-card">
             <a class="product-card__img" href="#">
               <picture>
+
+                <source media="(min-width: 768px)" width="161" height="172" type="image/webp" srcset="images/catalog-pro-500-chicken-tablet@1x.webp 1x, images/catalog-pro-500-chicken-tablet@2x.webp 2x">
+                <source type="image/webp" width="68" height="86" srcset="images/catalog-pro-500-chicken-mobile@1x.webp 1x, images/catalog-pro-500-chicken-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-pro-500-chicken-tablet@1x.png 1x, images/catalog-pro-500-chicken-tablet@2x.png 2x">
                 <img class="product-card__image" src="images/catalog-pro-500-chicken-mobile@1x.png" srcset="images/catalog-pro-500-chicken-mobile@2x.png 2x" width="68" height="86" alt="Питание 500 гр с курицей">
               </picture>
@@ -96,6 +100,11 @@
           <li class="product-card">
             <a class="product-card__img" href="#">
               <picture>
+
+                <source media="(min-width: 1440px)" width="172" height="196" type="image/webp" srcset="images/catalog-pro-1000-chicken-pc@1x.webp 1x, images/catalog-pro-1000-chicken-pc@2x.webp 2x">
+                <source media="(min-width: 768px)" width="168" height="206" type="image/webp" srcset="images/catalog-pro-1000-chicken-tablet@1x.webp 1x, images/catalog-pro-1000-chicken-tablet@2x.webp 2x">
+                <source type="image/webp" width="84" height="100" srcset="images/catalog-pro-1000-chicken-mobile@1x.webp 1x, images/catalog-pro-1000-chicken-mobile@2x.webp 2x">
+
                 <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-chicken-pc@1x.png 1x, images/catalog-pro-1000-chicken-pc@2x.png 2x">
                 <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-chicken-tablet@1x.png 1x, images/catalog-pro-1000-chicken-tablet@2x.png 2x">
                 <img class="product-card__image" src="images/catalog-pro-1000-chicken-mobile@1x.png" srcset="images/catalog-pro-1000-chicken-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с курицей">
@@ -127,6 +136,10 @@
           <li class="product-card">
             <a class="product-card__img" href="#">
               <picture>
+
+                <source media="(min-width: 768px)" width="161" height="172" type="image/webp" srcset="images/catalog-pro-500-fish-tablet@1x.webp 1x, images/catalog-pro-500-fish-tablet@2x.webp 2x">
+                <source type="image/webp" width="68" height="86" srcset="images/catalog-pro-500-fish-mobile@1x.webp 1x, images/catalog-pro-500-fish-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-pro-500-fish-tablet@1x.png 1x, images/catalog-pro-500-fish-tablet@2x.png 2x">
                 <img class="product-card__image" src="images/catalog-pro-500-fish-mobile@1x.png" srcset="images/catalog-pro-500-fish-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с рыбой">
               </picture>
@@ -157,6 +170,11 @@
           <li class="product-card">
             <a class="product-card__img" href="#">
               <picture>
+
+                <source media="(min-width: 1440px)" width="172" height="196" type="image/webp" srcset="images/catalog-pro-1000-fish-pc@1x.webp 1x, images/catalog-pro-1000-fish-pc@2x.webp 2x">
+                <source media="(min-width: 768px)" width="168" height="206" type="image/webp" srcset="images/catalog-pro-1000-fish-tablet@1x.webp 1x, images/catalog-pro-1000-fish-tablet@2x.webp 2x">
+                <source type="image/webp" width="84" height="100" srcset="images/catalog-pro-1000-fish-mobile@1x.webp 1x, images/catalog-pro-1000-fish-mobile@2x.webp 2x">
+
                 <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-fish-pc@1x.png 1x, images/catalog-pro-1000-fish-pc@2x.png 2x">
                 <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-fish-tablet@1x.png 1x, images/catalog-pro-1000-fish-tablet@2x.png 2x">
                 <img class="product-card__image" src="images/catalog-pro-1000-fish-mobile@1x.png" srcset="images/catalog-pro-1000-fish-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с рыбой">
@@ -188,6 +206,10 @@
           <li class="product-card">
             <a class="product-card__img" href="#">
               <picture>
+
+                <source media="(min-width: 768px)" width="161" height="172" type="image/webp" srcset="images/catalog-slim-500-buckwheat-tablet@1x.webp 1x, images/catalog-slim-500-buckwheat-tablet@2x.webp 2x">
+                <source type="image/webp" width="68" height="86" srcset="images/catalog-slim-500-buckwheat-mobile@1x.webp 1x, images/catalog-slim-500-buckwheat-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-buckwheat-tablet@1x.png 1x, images/catalog-slim-500-buckwheat-tablet@2x.png 2x">
                 <img class="product-card__image" src="images/catalog-slim-500-buckwheat-mobile@1x.png" srcset="images/catalog-slim-500-buckwheat-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с гречкой">
               </picture>
@@ -218,6 +240,11 @@
           <li class="product-card">
             <a class="product-card__img" href="#">
               <picture>
+
+                <source media="(min-width: 1440px)" width="172" height="196" type="image/webp" srcset="images/catalog-slim-1000-buckwheat-pc@1x.webp 1x, images/catalog-slim-1000-buckwheat-pc@2x.webp 2x">
+                <source media="(min-width: 768px)" width="168" height="206" type="image/webp" srcset="images/catalog-slim-1000-buckwheat-tablet@1x.webp 1x, images/catalog-slim-1000-buckwheat-tablet@2x.webp 2x">
+                <source type="image/webp" width="84" height="100" srcset="images/catalog-slim-1000-buckwheat-mobile@1x.webp 1x, images/catalog-slim-1000-buckwheat-mobile@2x.webp 2x">
+
                 <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-slim-1000-buckwheat-pc@1x.png 1x, images/catalog-slim-1000-buckwheat-pc@2x.png 2x">
                 <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-slim-1000-buckwheat-tablet@1x.png 1x, images/catalog-slim-1000-buckwheat-tablet@2x.png 2x">
                 <img class="product-card__image" src="images/catalog-slim-1000-buckwheat-mobile@1x.png" srcset="images/catalog-slim-1000-buckwheat-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с гречкой">
@@ -249,6 +276,10 @@
           <li class="product-card">
             <a class="product-card__img" href="#">
               <picture>
+
+                <source media="(min-width: 768px)" width="161" height="172" type="image/webp" srcset="images/catalog-slim-500-rice-tablet@1x.webp 1x, images/catalog-slim-500-rice-tablet@2x.webp 2x">
+                <source type="image/webp" width="68" height="86" srcset="images/catalog-slim-500-rice-mobile@1x.webp 1x, images/catalog-slim-500-rice-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-rice-tablet@1x.png 1x, images/catalog-slim-500-rice-tablet@2x.png 2x">
                 <img class="product-card__image" src="images/catalog-slim-500-rice-mobile@1x.png" srcset="images/catalog-slim-500-rice-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с рисом">
               </picture>
