--- a/source/index.html
+++ b/source/index.html
@@ -60,6 +60,11 @@
           <h1 class="nutrition-programs__title">Функциональное питание для котов</h1>
           <p class="nutrition-programs__description">Занялся собой? Займись котом!</p>
           <picture>
+
+            <source media="(min-width: 1440px)" width="552" height="500" type="image/webp" srcset="images/index-can-pc@1x.webp 1x, images/index-can-pc@2x.webp 2x">
+            <source media="(min-width: 768px)" width="710" height="610" type="image/webp" srcset="images/index-can-tablet@1x.webp 1x, images/index-can-tablet@2x.webp 2x">
+            <source type="image/webp" width="280" height="270" srcset="images/index-can-mobile@1x.webp 1x, images/index-can-mobile@2x.webp 2x">
+
             <source media="(min-width: 1440px)" width="552" height="500" type="image/png" srcset="images/index-can-pc@1x.png 1x, images/index-can-pc@2x.png 2x">
             <source media="(min-width: 768px)" width="710" height="610" type="image/png" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
             <img class="nutrition-programs__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
@@ -130,10 +135,18 @@
 
         <div class="example__slider">
           <picture>
+
+            <source media="(min-width: 768px)" width="560" height="512" type="image/webp" srcset="images/fat-cat-mobile@1x.webp 1x, images/fat-cat-mobile@2x.webp 2x">
+            <source type="image/webp" width="280" height="256" srcset="images/fat-cat-mobile@1x.webp 1x, images/fat-cat-mobile@2x.webp 2x">
+
             <source media="(min-width: 768px)" width="560" height="512" type="image/png" srcset="images/fat-cat-tablet@1x.png 1x, images/fat-cat-tablet@2x.png 2x">
             <img class="example__slider-img example__slider-img--fat-cat" src="images/fat-cat-mobile@1x.png" srcset="images/fat-cat-mobile@2x.png 2x" width="280" height="256" alt="Сравнение кота до и после применения питания - пухлый кот">
           </picture>
           <picture>
+
+            <source media="(min-width: 768px)" width="560" height="512" type="image/webp" srcset="images/thin-cat-mobile@1x.webp 1x, images/thin-cat-mobile@2x.webp 2x">
+            <source type="image/webp" width="280" height="256" srcset="images/thin-cat-mobile@1x.webp 1x, images/thin-cat-mobile@2x.webp 2x">
+
             <source media="(min-width: 768px)" width="560" height="512" type="image/png" srcset="images/thin-cat-tablet@1x.png 1x, images/thin-cat-tablet@2x.png 2x">
             <img class="example__slider-img example__slider-img--thin-cat" src="images/thin-cat-mobile@1x.png" srcset="images/thin-cat-mobile@2x.png 2x" width="280" height="256" alt="Сравнение кота до и после применения питания - спортивный кот">
           </picture>
