--- a/source/index.html
+++ b/source/index.html
@@ -30,12 +30,12 @@
           <img class="main-header__logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
         </picture>
       </a>
-      <button class="main-header__nav-toggle main-header__nav-toggle--closed" type="button">
+      <button class="main-header__nav-toggle main-header__nav-toggle--opened" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
 
-    <nav class="main-header__nav main-nav main-nav--closed main-nav--nojs">
+    <nav class="main-header__nav main-nav main-nav--opened main-nav--nojs">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item">
