--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
           <img class="main-header__logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
         </picture>
       </a>
-      <button class="main-header__nav-toggle main-header__nav-toggle--opened" type="button">
+      <button class="main-header__nav-toggle main-header__nav-toggle--opened main-header__nav-toggle--nojs" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
