--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,13 +30,13 @@
           <img class="main-header__logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
         </picture>
       </a>
-      <!-- Чтобы поменять бургер на крестик нужно поменять модификатор с main-header__nav-toggle--opened на main-header__nav-toggle--closed -->
-      <!-- Чтобы отобразить крестик или бургер необходимо удалить модификатор main-header__nav-toggle--nojs -->
+      <!-- Чтобы поменять бургер на крестик нужно поменять модификатор с opened на closed -->
+      <!-- Чтобы отобразить крестик или бургер необходимо удалить модификатор nojs -->
       <button class="main-header__nav-toggle main-header__nav-toggle--opened main-header__nav-toggle--nojs" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
-    <!-- Чтобы скрыть/открыть меню нужно поменять модификатор main-nav main-nav--opened на main-nav main-nav--closed -->
+    <!-- Чтобы скрыть/открыть меню нужно поменять модификатор opened на closed -->
     <nav class="main-header__nav main-nav main-nav--pages main-nav--opened main-nav--nojs">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
