--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,9 +30,12 @@
           <img class="main-header__logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
         </picture>
       </a>
+
       <!-- Чтобы поменять бургер на крестик нужно поменять модификатор с opened на closed -->
-      <!-- Чтобы отобразить крестик или бургер необходимо удалить модификатор nojs -->
-      <button class="main-header__nav-toggle main-header__nav-toggle--opened main-header__nav-toggle--nojs" type="button">
+
+      <!-- Чтобы скрыть крестик или бургер необходимо добавить модификатор nojs в кнопку ниже (main-header__nav-toggle- -nojs) -->
+
+      <button class="main-header__nav-toggle main-header__nav-toggle--opened" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
@@ -439,6 +442,8 @@
       </a>
     </div>
   </footer>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
