mobile-menu-fin

--- a/source/index.html
+++ b/source/index.html
@@ -35,12 +35,12 @@
 
       <!-- Чтобы скрыть крестик или бургер необходимо добавить модификатор nojs в кнопку ниже (main-header__nav-toggle- -nojs) -->
 
-      <button class="main-header__nav-toggle main-header__nav-toggle--opened" type="button">
+      <button class="main-header__nav-toggle main-header__nav-toggle--closed" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
     <!-- Чтобы скрыть/открыть меню нужно поменять модификатор opened на closed -->
-    <nav class="main-header__nav main-nav main-nav--opened main-nav--nojs">
+    <nav class="main-header__nav main-nav main-nav--closed main-nav--nojs">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item">
